# plmbias

./: .gitignore  Dockerfile  README.md  build_local.sh  contribs-t5-small_crows_pairs_finetuned.txt  contribs-t5-small_stereoset_finetuned.txt  contribs-t5-small_winobias_finetuned.txt  dashboard.html  dashboard.py  prediction_example.py  pull_accuracies.py  results.json  run_experiment.py  setup.py  test_local.sh
.github/workflows/: build_base_image.yml  docker-publish.yml  docker_ci.yml  ghcr_ci.yml  main.yml  mainimage.yml  separated.yml  train.yml
deps_image/: Dockerfile
experiments/ablation/: Dockerfile  train.py
experiments/shapley/: Dockerfile  train.py  train_upload.py
experiments/ss_ablation/: Dockerfile  train.py
experiments/train/: Dockerfile  (+2 more)
groups/: ablation.json  ablation2.json  ablation3.json  ablation4.json  generate_ablation_configuration.py  generate_probing_configuration.py  generate_ss_ablation_configuration.py  generate_t5_ablation_configuration.py  generate_training_configuration.py  shapley.json  shapley2.json  shapley3.json  ss_ablation.json  ss_ablation2.json  t5_shapley.json  training.json  training_classifieronly.json  training_finetuned.json  training_full.json  training_generative.json  training_large.json  training_lr_sweep.json  training_lr_sweep_t5.json
plmbias/: model.py  stereotypescore.py
plmbias-tools/: pyproject.toml
plmbias-tools/plmbias_tools/: run_experiment.py
results_bin/: pull_results.py
visualizations/: best_icat_mask.pt  head_contribs.pt  heatmaps_and_ablation_results.ipynb  ss_ablation_figures.ipynb
(+11 files in other folders)
