[tool.poetry]
name = "plmbias-tools"
version = "0.1.0"
description = ""
authors = ["Henry Scheible <henry.scheible@gmail.com>"]
readme = "README.md"
packages = [{include = "plmbias_tools"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
